Build shopify-api with rollup

--- a/packages/shopify-app-remix/package.json
+++ b/packages/shopify-app-remix/package.json
@@ -51,10 +51,9 @@
     "build-docs": "sh docs/build-docs.sh",
     "validate-docs": "sh ./docs/build-docs.sh isTest && yarn compare-docs",
     "lint": "eslint . --ext .js,.ts",
-    "build": "yarn run rollup && yarn tsc -p ./tsconfig.build.json",
+    "build": "yarn run rollup -c rollup.config.js --bundleConfigAsCjs && yarn tsc -p ./tsconfig.build.json",
     "test": "jest",
     "test:ci": "yarn test",
-    "rollup": "rollup -c rollup.config.js --bundleConfigAsCjs",
     "clean": "rimraf .rollup.cache dist",
     "changeset": "changeset",
     "version": "changeset version",
