--- a/packages/shopify-app-session-storage-kv/package.json
+++ b/packages/shopify-app-session-storage-kv/package.json
@@ -17,10 +17,9 @@
   "types": "./dist/ts/kv.d.ts",
   "scripts": {
     "lint": "eslint . --ext .js,.ts",
-    "build": "yarn run rollup && yarn tsc -p ./tsconfig.build.json",
+    "build": "yarn run rollup -c rollup.config.js --bundleConfigAsCjs && yarn tsc -p ./tsconfig.build.json",
     "test": "jest",
     "test:ci": "yarn test",
-    "rollup": "rollup -c rollup.config.js --bundleConfigAsCjs",
     "clean": "rimraf .rollup.cache dist",
     "changeset": "changeset",
     "version": "changeset version",
