--- a/package.json
+++ b/package.json
@@ -57,6 +57,8 @@
     "ts-jest": "^29.1.2"
   },
   "workspaces": [
-    "packages/**/*"
+    "packages/api-clients/*",
+    "packages/apps/*",
+    "packages/session-storage/*"
   ]
 }
