--- a/packages/apps/shopify-api/tsconfig.json
+++ b/packages/apps/shopify-api/tsconfig.json
@@ -14,5 +14,5 @@
   "exclude": [
     "**/*.test.ts", "**/test/*", "**/__tests__/*",
   ],
-  "extends": "../../tsconfig.base.json",
+  "extends": "../../../tsconfig.base.json",
 }
